2015-05-31  Jesper Öqvist <joqvist@google.com>

    * Removed deprecated Frontend.process method
    * Program.lookupLibType is now an inter-type method (was syn attribute)

2015-04-16  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * The TypeDecl.isReifiable attribute was moved from the Java 7 extension
    to the Java 5 extension and is now declared in the new file
    java5/frontend/ReifiableTypes.jrag

2015-04-14  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * TypeDecl.isCheckedException() now returns true if the type is a subtype of
    java.lang.RuntimeException or java.lang.Error.
    * TypeDecl.isUncheckedException() is now exactly the inverse of
    TypeDecl.isCheckedException().
    * The two above attributes have approximately inverted their behaviour
    and now work opposite to how they used to work. The naming of the
    attributes was likely an error to begin with because isCheckedException
    actually did the exact same thing that isUncheckedException should always
    have done!

2015-03-31  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Implemented explicit type bounds checking. This was previously
    part of the subtype checking which produced incorrect results in the
    form of missing errors for incompatible types.

2015-03-09  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * The Program.LibCompilationUnit NTA should no longer be populated with
    null values. The Program.getCompilationUnit method was changed to a lazy
    attribute backing the LibCompilationUnit NTA. This attribute is checked
    first for nullness before accessing the NTA.
    * Program.lookupType(String,String) no longer returns null when the type
    is not found, instead the UnknownType instance is returned.

2015-03-03  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * JavaDumpTree now ignores semantic errors
    * Improved ParseName rewriting. Many identifiers are not classified during
    parsing. The classification instead happens on demand during semantic