@@ -28,6 +28,7 @@ module("java4 frontend") {
 	}
 
 	parser {
+		include "parser/Header.parser", [-2]
 		include "parser/Preamble.parser", [-1]
 		include "parser/Java1.4.parser"
 	}
