@@ -1,7 +1,3 @@
-%header {:
- package parser;
- import AST.*;
-:};
 %embed {:
   class Events extends Parser.Events {
     public void scannerError(Scanner.Exception e) {
