@@ -195,6 +195,7 @@
 			binary="true" force="false">
 			<!-- we use filelist because the order is important -->
 			<filelist dir="${java4.dir}/parser">
+				<file name="Header.parser"/>
 				<file name="Preamble.parser"/>
 				<file name="Java1.4.parser"/>
 				<file name="ErrorRecovery.parser"/>
