@@ -1,3 +1,9 @@
+2015-06-18  Jesper Öqvist <joqvist@google.com>
+
+    * Isolated header part of java4/parser/Preamble.parser to
+    java4/parser/Header.parser. This makes it easier to change the parser
+    package and import declarations.
+
 2015-05-31  Jesper Öqvist <joqvist@google.com>
 
     * Removed deprecated Frontend.process method
